--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "express-ws": "^5.0.2",
     "pg": "^8.13.1",
+    "sqlite3": "^5.1.7",
     "ws": "^8.18.0",
     "wscat": "^6.0.1"
   },
