--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,8 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "eslint.config.mjs"
+  ]
 }
