--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "npx tsx src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint 'src/**/*.{js,ts}'",
-    "format": "prettier --write 'src/**/*.{js,ts,tsx,jsx,json,css,scss,md}'"
+    "lint": "eslint 'src/**/*.{js,ts}' 'client/**/*.{js,ts}'",
+    "format": "prettier --write 'src/**/*.{js,ts,tsx,jsx,json,css,scss,md}' --write 'client/**/*.{js,ts,tsx,jsx,json,css,scss,md}'"
   },
   "keywords": [],
   "author": "",
